--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev": "concurrently \"npm run serve-api\" \"npm run serve\"",
+    "serve": "ng serve --port 3333 --proxy-config proxy.config.json",
+    "serve-api": "nodemon server.js --watch server"
   },
   "private": true,
   "dependencies": {
@@ -20,7 +23,10 @@
     "@angular/platform-browser": "^6.0.2",
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
+    "body-parser": "^1.18.3",
+    "concurrently": "^3.6.0",
     "core-js": "^2.5.4",
+    "express": "^4.16.3",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
